welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {

  
  for (k <-0 to 5){
    do{
      baisse brosse
      avance()
    }while (!estFaceMur())
    
    
  	if (getDirection ()== Direction.OUEST){
      gauche()
      avance()
      gauche()
    }
    else {
      droite()
      avance()
      droite()
    }
  }
}